--- a/src/styles/Markdown.css
+++ b/src/styles/Markdown.css
@@ -9,6 +9,15 @@
   Current colors taken from GitHub's CSS
 */
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-canvas-default: #0d1117;
+    --color-canvas-subtle: #161b22;
+    --color-border-default: #30363d;
+    --color-border-muted: #21262d;
+  }
+}
+
 .hljs {
   color: #c9d1d9;
 }
